# Proyecto-1-SO

./: .gitignore  CMakeLists.txt  README.md  a.out  auxiliaries.c  auxiliaries.h  codigo.c  constants.h  dataload  dataload.c  essentials.c  essentials.h  main  new_dataload.c  programa.c  prueba  prueba.c  read_windows2.c  statistics.c  statistics.h  time_plotter  timeline.c  timeline.h
Archivos/: 18.01.11_BR_videos.csv  18.01.11_FR_videos.csv  18.01.11_JP_videos.csv
LINUX/: CMakeLists.txt  auxiliaries.h  essentials.c  statistics.c
New directory/: new_dataload.c
WINDOWS/: read_windows.c  windows.c
