cmake_minimum_required(VERSION 3.22)
project(Code C)

set(CMAKE_C_STANDARD 11)

add_executable(Code
        dataload.c
        timeline.h
        timeline.h
        timeline.h
        timeline.c
        programa.c
        statistics.c
        statistics.h
        essentials.c
        essentials.h
        auxiliaries.c
        auxiliaries.h
        new_dataload.c
        constants.h)
